Hide Musicbox for now. Avoid jumping footer by setting .content min-height to 520px A few template adjustments.

--- a/site_media/css/style.css
+++ b/site_media/css/style.css
@@ -94,6 +94,7 @@ margin:-11px 0 0;
 
 .content{
 padding:10px 0 0;
+min-height: 520px;
 }
 
 .clear{
